--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -53,8 +53,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkProduct">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventory'%}"> Enter a Product</a>
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryUpdate'%}"> Update Product</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryQuery'%}"> Search for Product</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryUpdate'%}"> Update Product</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryShipped'%}"> Shipped Product</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
