--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -79,7 +79,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Pic&Sum</a>
+                <a class="nav-link" href="{% url 'CWBDataApp:PicSum'%}">Pic&Sum</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Forms</a>
@@ -91,7 +91,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkHelp">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:help'%}"> General Help</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddEmployee'%}"> Add Employee</a>
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddBoardProfile'%}"> Add Board Profile</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddBoardProfile'%}"> Add/Remove Board Profile</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddColour'%}"> Add Colour</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddSupplier'%}"> Add Supplier</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
