--- a/CWBDataApp/templates/CWBDataApp/MaterialInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventory.html
@@ -45,7 +45,7 @@
 
         <div class="inline-flex inputBox">
           <label for="numBoxes">Number of Boxes*: </label>
-          <input id="numBoxes" type="number" name="numBoxes" min="1">
+          <input id="numBoxes" type="number" name="numBoxes" min="0.5" step="0.5">
         </div>
 
         <div class="inline-flex inputBox">
