--- a/CWBDataApp/templates/CWBDataApp/MaterialInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventoryUpdate.html
@@ -45,7 +45,7 @@
 
         <div class="inline-flex inputBox">
           <label for="numBoxes">Number of Boxes: </label>
-          <input id="numBoxes" type="number" name="numBoxes" min="0" value="{{ Material.numberofboxes }}">
+          <input id="numBoxes" type="number" name="numBoxes" min="0" step="0.5" value="{{ Material.numberofboxes }}">
         </div>
 
         <div class="inline-flex inputBox">
