--- a/CWBDataApp/templates/CWBDataApp/BatchCostQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostQuery.html
@@ -53,18 +53,11 @@
         <th>Total Cost</th>
         <th>Total Weight</th>
         <th>Price/Pound</th>
-        <th>Supplier_1</th>
-        <th>Weight_1</th>
-        <th>Cost</th>
-        <th>Supplier_2</th>
-        <th>Weight_2</th>
-        <th>Cost</th>
-        <th>Supplier_3</th>
-        <th>Weight_3</th>
-        <th>Cost</th>
-        <th>Supplier_4</th>
-        <th>Weight_4</th>
-        <th>Cost</th>
+        {% for i in range %}
+          <th>Material_{{i}}</th>
+          <th>Weight_{{i}}</th>
+          <th>Cost</th>
+        {% endfor %}
         <th>Colour</th>
         <th>Colour Weight</th>
         <th>Colour Cost</th>
@@ -78,18 +71,9 @@
         <td>{{ batch.totalcost }}</td>
         <td>{{ batch.totalweight }}</td>
         <td>{{ batch.priceperpound }}</td>
-        <td>{{ sup1 }}</td>
-        <td>{{ batch.weight1 }}</td>
-        <td>{{ batch.value1 }}</td>
-        <td>{{ sup2 }}</td>
-        <td>{{ batch.weight2 }}</td>
-        <td>{{ batch.value2 }}</td>
-        <td>{{ sup3 }}</td>
-        <td>{{ batch.weight3 }}</td>
-        <td>{{ batch.value3 }}</td>
-        <td>{{ sup4 }}</td>
-        <td>{{ batch.weight4 }}</td>
-        <td>{{ batch.value4 }}</td>
+        {% for k in dict %}
+          <td>{{ v }}</td>
+        {% endfor %}
         <td>{{ batch.colour }}</td>
         <td>{{ batch.colourweight }}</td>
         <td>{{ batch.colourvalue }}</td>
