Added new templates/views add/udate profile averages

--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -95,6 +95,8 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddColour'%}"> Add Colour</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddSupplier'%}"> Add Supplier</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddProfileAverage'%}"> Add Profile Average</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateProfileAverage'%}"> Update Profile Average</a>
                 </div>
               </li>
               <li class="nav-item">
