Can now add orders to machine1

--- a/CWBDataApp/templates/CWBDataApp/ProductInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventory.html
@@ -63,8 +63,8 @@
         </div>
 
         <div class="inline-flex inputBox">
-          <label for="numSkids">Number of Skids*: </label>
-          <input id="numSkids" type="number" name="numSkids" max="100">
+          <label for="numSkids">Number of Pieces*: </label>
+          <input id="numSkids" type="number" name="numSkids" max="100000">
         </div>
 
         <br>
