--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
@@ -62,10 +62,10 @@
           <th>Colour</th>
           <th>Embossed</th>
           <th>Double Sided</th>
-          <th>Number of Skids</th>
+          <th>Number of Pieces</th>
         </tr>
         <tr>
-          <td>{{ profile.productname }}</td>
+          <td>{{ product.productname }}</td>
           <td>{{ product.colour }}</td>
           {% if product.embossed == 1 %}
             <td>Yes</td>
