--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="inline-flex inputBox">
-        <label for="numSkids">Number of Skids Shipped*: </label>
+        <label for="numSkids">Number of Pieces Shipped*: </label>
         <input id="numSkids" type="number" name="numSkids" max="100">
       </div>
 
