--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -76,6 +76,7 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine1'%}"> Machine 1 </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine2'%}"> Machine 2 </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine3'%}"> Machine 3 </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ViewOrders'%}"> View Orders </a>
                 </div>
               </li>
               <li class="nav-item">
