Fixed ProductUpdate View to properly change ordersheet inventory

--- a/CWBDataApp/templates/CWBDataApp/ViewOrders.html
+++ b/CWBDataApp/templates/CWBDataApp/ViewOrders.html
@@ -39,7 +39,7 @@
 
         <br>
 
-          <input type="submit" name="enterNewOrder" value="Add">
+          <input type="submit" name="enterNewOrder" value="View">
       </div>
     </form>
   </div>
