Cleaned up ordersheet1 view, used addDate function where possible

--- a/CWBDataApp/templates/CWBDataApp/ViewOrders.html
+++ b/CWBDataApp/templates/CWBDataApp/ViewOrders.html
@@ -59,6 +59,7 @@
           <th>Pcs Remaining</th>
           <th>Start Date</th>
           <th>End Date</th>
+          <th>Length of run in Days</th>
           <th>Priority</th>
           <th>Due Date</th>
           <th>Customer</th>
@@ -77,6 +78,7 @@
               <td>{{ order.pcsremaining }}</td>
               <td>{{ order.projectedstartdate }}</td>
               <td>{{ order.projectedenddate }}</td>
+              <td>{{ order.lengthofrunindays }}</td>
               <td>{{ order.priorityrank }}</td>
               <td>{{ order.duedate }}</td>
               <td>{{ order.customer }}</td>
