Added updatesupplier view, suppliers price per pound can now be changed

--- a/CWBDataApp/templates/CWBDataApp/UpdateOrders.html
+++ b/CWBDataApp/templates/CWBDataApp/UpdateOrders.html
@@ -11,7 +11,7 @@
   <div>
     <h2 id="header"> Update Orders </h2>
     <p id="descriptionParagraph">
-        Upload a picture and summary of a test
+        Update the details of an order
     </p>
 
   {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
